Fix #1456: large result sets overflow from the frame

--- a/client/app/components/dynamic-table/dynamic-table.css
+++ b/client/app/components/dynamic-table/dynamic-table.css
@@ -1,3 +1,7 @@
+dynamic-table > div {
+  overflow: auto;
+}
+
 th.sortable-column {
   cursor: pointer;
 }
